// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Modifiers Modifiers MockStates Highlight outline renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #118BFF;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #41A2FF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #41A2FF;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Highlight outline renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #118BFF;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #41A2FF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #41A2FF;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Highlight renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #118BFF;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #41A2FF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #41A2FF;
}

<button
  className="is-active emotion-0"
>
  Active Highlight Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Highlight renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #118BFF;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #41A2FF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #41A2FF;
}

<button
  className="is-hover emotion-0"
>
  Hover Highlight Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Optional renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #1A212A;
  border: 1px solid #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="is-active emotion-0"
>
  Active Optional Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Optional renders as active 2`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #1A212A;
  border: 1px solid #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="is-active emotion-0"
>
  Active Optional Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Optional renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #1A212A;
  border: 1px solid #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="is-hover emotion-0"
>
  Hover Optional Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Optional renders with hover 2`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #1A212A;
  border: 1px solid #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="is-hover emotion-0"
>
  Hover Optional Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Primary outline renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Primary outline renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Primary renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Primary renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Secondary renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="is-active emotion-0"
>
  Active Secondary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Secondary renders as active 2`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Secondary renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="is-hover emotion-0"
>
  Hover Secondary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Secondary renders with hover 2`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers renders as highlight 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #118BFF;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #41A2FF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #41A2FF;
}

<button
  className="emotion-0"
>
  Secondary Button
</button>
`;

exports[`Button Modifiers renders as optional 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #1A212A;
  border: 1px solid #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="emotion-0"
>
  Optional Button
</button>
`;

exports[`Button Modifiers renders as primary 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="emotion-0"
>
  Primary Button
</button>
`;

exports[`Button Modifiers renders as secondary 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="emotion-0"
>
  Optional Button
</button>
`;

exports[`Button Modifiers renders outline as highlight 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #118BFF;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #41A2FF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #41A2FF;
}

<button
  className="emotion-0"
>
  Highlight Button
</button>
`;

exports[`Button Modifiers renders outline as optional 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #1A212A;
  border: 1px solid #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="emotion-0"
>
  Optional Button
</button>
`;

exports[`Button Modifiers renders outline as primary 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="emotion-0"
>
  Primary Button
</button>
`;

exports[`Button Modifiers renders outline as secondary 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #8697A2;
  background-color: #31373F;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  color: #FFF;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  color: #FFF;
}

<button
  className="emotion-0"
>
  Secondary Button
</button>
`;

exports[`Button renders as an anchor tag 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<a
  className="emotion-0"
  href="#some-anchor"
>
  Primary Button (Anchor)
</a>
`;

exports[`Button renders as disabled 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="emotion-0"
  disabled={true}
>
  Disabled Primary Button
</button>
`;

exports[`Button renders as fullWidth 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
  width: 100%;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="emotion-0"
>
  Full Width Primary Button
</button>
`;

exports[`Button renders correctly 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="emotion-0"
>
  Primary Button
</button>
`;

exports[`Button renders rounded 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
  text-transform: uppercase;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="emotion-0"
>
  Round Primary Button
</button>
`;

exports[`Button renders uppercased 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 100px;
  color: #FFF;
  background-color: #0CD664;
  font-size: 0.875rem;
  line-height: 1.0625rem;
  padding: 0.5rem 2rem;
  text-transform: uppercase;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #3DDE83;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #3DDE83;
}

<button
  className="emotion-0"
>
  Uppercase Primary Button
</button>
`;
